tests/miniJava/neg/000837_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = if new java ( ) ; } }
